# bsd-plotutils

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Makefile.inc  README.md  build.sh  install-fixed.sh  release.sh
cmd/: Makefile  Makefile.inc
cmd/atoplot/: CMakeLists.txt  atoplot.c
cmd/graph/: CMakeLists.txt  Makefile  graph.1  graph.c
cmd/plot/: CMakeLists.txt  Makefile  atoplot.c  driver.c  plot.1  plot.sh  plottoa.c
cmd/plottoa/: CMakeLists.txt  plottoa.c
cmd/spline/: CMakeLists.txt  Makefile  spline.1  spline.c
cmd/vplot/: CMakeLists.txt  chrtab.c  vplot.c
graph/: Makefile  graph.1  graph.c
lib/: Makefile  Makefile.inc
lib/ascii/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  internal.h  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
lib/plot/: Makefile  arc.c  circle.c  close.c  cont.c  dot.c  erase.c  internal.h  label.c  line.c  (+10 more)
libplot/: CMakeLists.txt  Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  plot.3  plot.5  plotinternal.h  point.c  putsi.c  space.c
libplot/aed/: Makefile
libplot/bindings/: Makefile
libplot/bindings/f77plot/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  f77plot.3  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c
libplot/bindings/py27plot/: Makefile  gen_submodules.sh
libplot/bindings/py27plot/plot/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  module.c  move.c  open.c  point.c  space.c
libplot/bitgraph/: Makefile  arc.c  bg.h  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c
libplot/crt/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  crt.h  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/aed/: CMakeLists.txt  aed.h  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/bitgraph/: CMakeLists.txt  arc.c  bg.h  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c
libplot/drivers/dumb/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  cont.c  dot.c  dumb.h  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/gigi/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  gigi.h  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c
libplot/drivers/hp2648/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  hp2648.h  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/hp7221/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  hp7221.h  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/imagen/: CMakeLists.txt  arc.c  box.c  charset.c  circle.c  close.c  cont.c  dot.c  erase.c  imPcodes.h  imp.h  label.c  line.c  linemod.c  move.c  open.c  point.c  scale.c  space.c
libplot/drivers/t300/: CMakeLists.txt  arc.c  close.c  con.h  dot.c  erase.c  label.c  line.c  point.c  space.c  subr.c
libplot/drivers/t300s/: CMakeLists.txt  arc.c  circle.c  close.c  con.h  label.c  line.c  linemod.c  move.c  open.c  point.c  subr.c
libplot/drivers/t4013/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  scale.c  space.c  subr.c  t4013.h
libplot/drivers/t4014/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  scale.c  space.c  subr.c  t4014.h
libplot/drivers/t450/: CMakeLists.txt  box.c  circle.c  con.h  dot.c  erase.c  label.c  line.c  move.c  open.c  point.c  space.c  subr.c
libplot/drivers/vt0/: CMakeLists.txt  arc.c  box.c  circle.c  close.c  dot.c  erase.c  frame.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c  vt0.h
libplot/dumb/: Makefile  arc.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/examples/: libplot_example.c  py27plot_example.py
libplot/f77plot/: Makefile  arc.c  box.c  circle.c  close.c  clospl.c  cont.c  dot.c  erase.c  f77plot.3  label.c  line.c  linemd.c  linemod.c  move.c  open.c  point.c  space.c
libplot/gigi/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c
libplot/grn/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  dot.c  erase.c  grnplot.h  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/hp2648/: Makefile
libplot/hp7221/: Makefile  arc.c  box.c  circle.c  close.c  cont.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  space.c  subr.c
libplot/imagen/: Makefile  arc.c  box.c  charset.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  scale.c  space.c
libplot/include/: plot.h  plotcompat.h
libplot/plot/: Makefile  arc.c  circle.c  close.c  cont.c  dot.c  erase.c  label.c  line.c  linemod.c  linmod.c  move.c  open.c  plot.3  plot.5  plot.h  plotcompat.h  point.c  putsi.c  space.c
libplot/t300/: Makefile
libplot/t300s/: Makefile
libplot/t4013/: Makefile  arc.c  box.c  circle.c  close.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  open.c  point.c  scale.c  space.c  subr.c
libplot/t4014/: Makefile  arc.c  box.c  circle.c  close.c  dot.c  erase.c  label.c  line.c  linemod.c  move.c  point.c  scale.c  space.c  subr.c
libplot/t450/: Makefile
libplot/vt0/: Makefile  arc.c  box.c  circle.c  close.c  dot.c  erase.c  frame.c  label.c  line.c  linemod.c  linmod.c  move.c  open.c  point.c  space.c  subr.c
plot/: Makefile  atoplot.c  chrtab.c  crtdriver.c  crtplot.c  debug.c  driver.c  plot.1  plot.sh  plottoa.c  plottoc.c
scripts/: install-fakeroot.sh  install-fixed.sh
spline/: Makefile  spline.1  spline.c
(+18 files in other folders)
